deploying on github for gh pages

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "sapper dev && postcss static/tailwind.css -o static/index.css -w",
     "build": "sapper build --legacy && NODE_ENV=production postcss static/tailwind.css -o static/index.css",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build"
+    "export": "sapper export --basepath sapperblog --legacy",
+    "start": "node __sapper__/build",
+    "deploy": "npm run export && node ./scripts/gh-pages.js"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
