--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "description": "building sapper blog using tailwindcss",
   "version": "0.0.1",
   "scripts": {
+    "tailwind": "postcss static/tailwind.css -o static/index.css",
     "dev": "sapper dev && postcss static/tailwind.css -o static/index.css -w",
     "build": "postcss static/tailwind.css -o static/index.css && node ./scripts/gh-pages.js && sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build"
+    "export": "sapper export --basepath sapper-tailwind-basic-skeleton --legacy",
+    "start": "node __sapper__/build",
+    "deploy": "postcss static/tailwind.css -o static/index.css && npm run export && node ./scripts/gh-pages.js"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
@@ -16,6 +18,7 @@
     "polka": "next",
     "postcss-cli": "^8.3.1",
     "sirv": "^1.0.0",
+    "svelte-seo": "^1.1.0",
     "svelte-tawk-to-chat-widget": "^0.0.3",
     "tailwindcss": "^2.1.2"
   },
@@ -25,15 +28,19 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@jackfranklin/rollup-plugin-markdown": "^0.3.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
+    "lodash": "^4.17.21",
     "rollup": "^2.3.4",
+    "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "svelte": "^3.17.3",
+    "svelte-image": "^0.2.9"
   }
 }
