--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "tailwind": "postcss static/tailwind.css -o static/index.css",
     "dev": "sapper dev && postcss static/tailwind.css -o static/index.css -w",
     "build": "postcss static/tailwind.css -o static/index.css && node ./scripts/gh-pages.js && sapper build --legacy",
-    "buildtailwind": "tailwindcss build static/tailwind.css -o static/index.css && node ./scripts/gh-pages.js && sapper build --legacy",
     "export": "sapper export --basepath sapper-tailwind-basic-skeleton --legacy",
     "start": "node __sapper__/build",
     "deploy": "postcss static/tailwind.css -o static/index.css && npm run export && node ./scripts/gh-pages.js"
@@ -36,6 +35,7 @@
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-glob": "^1.0.2",
