--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "tailwind": "postcss static/tailwind.css -o static/index.css",
-    "dev": "sapper dev && postcss static/tailwind.css -o static/index.css -w",
-    "build": "postcss static/tailwind.css -o static/index.css && node ./scripts/gh-pages.js && sapper build --legacy",
+    "dev": "postcss static/tailwind.css -o static/index.css -w && sapper dev",
+    "build": "sapper build --legacy && npm run export && node ./scripts/gh-pages.js",
     "export": "sapper export --basepath sapper-tailwind-basic-skeleton --legacy",
     "start": "node __sapper__/build",
     "deploy": "postcss static/tailwind.css -o static/index.css && npm run export && node ./scripts/gh-pages.js"
@@ -15,11 +15,11 @@
     "autoprefixer": "^10.2.5",
     "compression": "^1.7.1",
     "gh-pages": "^3.1.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "polka": "next",
     "postcss-cli": "^8.3.1",
     "sirv": "^1.0.0",
-    "svelte-seo": "^1.1.0",
-    "svelte-tawk-to-chat-widget": "^0.0.3",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
@@ -31,17 +31,19 @@
     "@jackfranklin/rollup-plugin-markdown": "^0.3.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "svelte": "^3.17.3",
+    "svelte-paginate": "^0.0.1",
+    "svelte-seo": "^1.1.0",
+    "svelte-tawk-to-chat-widget": "^0.0.3"
   }
 }
